--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,10 @@ section {
 .menu-btn span::after,
 .menu-btn span {
 	position: absolute;
-	top: 50%; margin-top: -1px;
-	left: 50%; margin-left: -10px;
+	top: 50%;
+	margin-top: -1px;
+	left: 50%;
+	margin-left: -10px;
 	width: 20px;
 	height: 2px;
 	background-color: rgb(255, 255, 255);
@@ -221,10 +223,6 @@ header .container {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-}
-
-.nav-bar {
-
 }
 
 .nav-bar ul {
@@ -391,7 +389,7 @@ header .container {
 	mix-blend-mode: screen;
 	opacity: 0.2;
 	filter: blur(200px);
-
+z-index: -10;
 }
 
 .dez-items {
@@ -403,7 +401,7 @@ header .container {
 .dez-item {
 	max-width: 32%;
 	min-height: fit-content;
-/* margin-right: 20px; */
+	/* margin-right: 20px; */
 
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
 
@@ -557,10 +555,6 @@ header .container {
 	border-radius: 16px;
 }
 
-.slider-img img {
-		/* border-radius: 17px; */
-}
-
 .slider-news {
 	/* padding-left: 50px; */
 	/* max-width: 400px; */
@@ -613,13 +607,13 @@ header .container {
 .partners {
 	display: grid;
 	grid-template-columns: 2fr 2fr 1fr 2fr 2fr 1fr;
-	justify-items: center;	
+	justify-items: center;
 	grid-gap: 1em;
 }
 
 .partner-logo {
-margin-top: auto;
-margin-bottom: auto;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .logo-akfo {
@@ -726,6 +720,65 @@ footer {
 	font-weight: 500;
 }
 
+/* NEW PAGE! ABOUT
+===========================
+===========================  */
+
+#aboutPage {
+	margin-top: 0%;
+}
+
+.img-about {
+	background-repeat: no-repeat;
+	width: 540px;
+	height: 330px;
+
+	border-radius: 5px;
+}
+
+.img-1 {
+	background-size: 110%;
+	background-position: 5% 100%;
+	background-image: url('../src/img/green-office.jpg');
+}
+
+.img-2 {
+	background-size: 90%;
+	background-position: 0 100%;
+	background-image: url('../src/img/img_2.jpg');
+}
+
+.img-3 {
+	background-size: 102%;
+	background-position: 15% 50%;
+	background-image: url('../src/img/img_3.jpg');
+}
+
+.about {
+		padding-top: 17%;
+		background: linear-gradient(340deg, rgba(255, 255, 255, 0.1) 30%, rgba(255, 255, 255, 0) 80%);
+	filter: drop-shadow(0px 4.9902px 8.31699px rgba(0, 0, 0, 0.4));
+	backdrop-filter: blur(4.1585px);
+	box-shadow: 0px 6px 10px rgb(0 0 0 / 10%);
+		border-radius: 10px;
+}
+
+.about-inner {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 4em;
+justify-content: space-between;
+align-items: center;
+	padding: 4%;
+
+margin-bottom: 5%;
+
+}
+
+.about-content {
+
+}
+
 
 
 @media (max-width: 1399px) {
@@ -743,15 +796,15 @@ footer {
 		padding: 8px 15px;
 		font-size: 14px;
 	}
-	
+
 
 	header {
 		height: fit-content;
 	}
 
 	.logo-dez {
-				width: 20%;
-	
+		width: 20%;
+
 	}
 
 	.logo-dez img {
@@ -763,7 +816,7 @@ footer {
 		min-width: 470px;
 		font-size: 14px;
 	}
-	
+
 	.phone-num {
 		font-size: 14px;
 	}
@@ -771,77 +824,77 @@ footer {
 	/* INTRO
 ================= */
 
-.intro {
-	background-position: 40% 3%;
-	background-size: 105%;
-	padding-top: 3%;
-	padding-bottom: 0;
-}
+	.intro {
+		background-position: 40% 3%;
+		background-size: 105%;
+		padding-top: 3%;
+		padding-bottom: 0;
+	}
 
-.intro h1 {
-	margin-bottom: 10%;
-	font-size: 33px;
-	letter-spacing: 0.08em;
-}
+	.intro h1 {
+		margin-bottom: 10%;
+		font-size: 33px;
+		letter-spacing: 0.08em;
+	}
 
-.order-btns {
-	flex-direction: column;
-}
+	.order-btns {
+		flex-direction: column;
+	}
 
-.order-btns .btn {
-	margin-bottom: 3%;
-}
+	.order-btns .btn {
+		margin-bottom: 3%;
+	}
 
-.intro-content p {
-	margin: 8% 0;
-	text-align: start;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 120%;
-	letter-spacing: 0.055em;
-}
+	.intro-content p {
+		margin: 8% 0;
+		text-align: start;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 120%;
+		letter-spacing: 0.055em;
+	}
 
-.logo-intro {
-	display: none;
-}
+	.logo-intro {
+		display: none;
+	}
 
-/* three-dez 
+	/* three-dez 
 ====================*/
 
-.dez-items {
-	width: 100%;
-}
+	.dez-items {
+		width: 100%;
+	}
 
 
-/* SLIDER
+	/* SLIDER
 ================== */
 
-.swiper-button-next {
-	right: 8%;
-}
+	.swiper-button-next {
+		right: 8%;
+	}
 
-.swiper-button-prev {
-	left: 8%;
-}
+	.swiper-button-prev {
+		left: 8%;
+	}
 
 
-/* PARTNERS
+	/* PARTNERS
 ===================== */
 
-.partners {
-	grid-template-columns: 2fr 2fr 1fr;
-	gap: 2em;
+	.partners {
+		grid-template-columns: 2fr 2fr 1fr;
+		gap: 2em;
 
-}
+	}
 
-.partner-logo {
-	margin-bottom: 0;
+	.partner-logo {
+		margin-bottom: 0;
 	}
 
 }
 
 
-@media (max-width: 990px) {
+@media (max-width: 989px) {
 
 	h2 {
 		font-size: 16px;
@@ -851,6 +904,13 @@ footer {
 		padding-top: 5%;
 	}
 
+	section {
+		margin-bottom: 100px;
+	}
+
+	.title {
+		margin-bottom: 70px;
+	} 
 
 	.nav-bar ul {
 		min-width: 390px;
@@ -874,52 +934,74 @@ footer {
 		background-size: 20%;
 		background-position: 0 50%
 	}
-	
+
 	.icon-fast {
 		background-size: 35%;
 	}
 
 
-.dez-item {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	max-width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 20px;
-	padding-bottom: 1%;
-}
+	.dez-item {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		max-width: 90%;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		padding-bottom: 1%;
+	}
 
-.dez-item h3 {
-	width: 100%;
-}
+	.dez-item h3 {
+		width: 100%;
+	}
 
-.dez-icon {
-	height: 100px;
-	width: 100px;
-	margin-left: 4%;
-	margin-right: 5%;
-	background-size: 100%;
-	margin-top: 5%;
-	margin-bottom: 5%;
-}
+	.dez-icon {
+		height: 100px;
+		width: 100px;
+		margin-left: 4%;
+		margin-right: 5%;
+		background-size: 100%;
+		margin-top: 5%;
+		margin-bottom: 5%;
+	}
 
-.dez-item p {
-	display: inline-block;
-	margin-top: auto;
-	margin-bottom: auto;
-	width: 70%;
-	padding: 0;
-}
+	.dez-item p {
+		display: inline-block;
+		margin-top: auto;
+		margin-bottom: auto;
+		width: 70%;
+		padding: 0;
+	}
 
 
-/* SLIDER
+	/* SLIDER
 ================== */
 
-.swiper-button-next,
-.swiper-button-prev {
-	display: none;
+	.swiper-button-next,
+	.swiper-button-prev {
+		display: none;
+	}
+
+
+		/* ABOUT PAGE
+================== */
+
+	.about-inner {
+		grid-template-columns: 1fr;
+		gap: 2em;
+		align-content: center;
+}
+
+.img-about {
+	width: 600px;
+	height: 330px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.img-2 {
+	background-size: 110%;
+	background-position: 15% 40%;
 }
 
 
@@ -937,8 +1019,8 @@ footer {
 	}
 
 	.title {
-	margin-bottom: 50px;
-}
+		margin-bottom: 50px;
+	}
 
 	.btn {
 		font-size: 10px;
@@ -950,19 +1032,19 @@ footer {
 	}
 
 
-/* HEADER
+	/* HEADER
 ===================== */
-header .container {
-	justify-content: space-between;
-}
+	header .container {
+		justify-content: space-between;
+	}
 
-header {
-	height: fit-content;
-}
+	header {
+		height: fit-content;
+	}
 
 
 
-.nav-bar {
+	.nav-bar {
 		position: fixed;
 		top: 0;
 		right: 0;
@@ -972,15 +1054,15 @@ header {
 		padding-bottom: 30px;
 
 		width: 250px;
-	
+
 		border-radius: 5px;
 		background: linear-gradient(50deg, rgba(9, 56, 93, 0.8) 30%, rgba(1, 14, 25, 0.7) 70%);
 		box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
-		backdrop-filter: blur(5px);		
-		
+		backdrop-filter: blur(5px);
+
 		transition: all ease-out 0.5s;
 		transform-origin: top center;
-		transform: scaleY(0) translateY(-20%);
+		transform: scaleY(.2) translateY(-100%);
 		opacity: 0;
 	}
 
@@ -988,7 +1070,7 @@ header {
 		display: block;
 		transform: scaleY(1) translateY(0);
 		opacity: 1;
-		
+
 	}
 
 	.nav-bar ul {
@@ -1003,107 +1085,104 @@ header {
 		margin-bottom: 10px;
 	}
 
-.phone-num {
-	font-size: 13px;
-}
+	.phone-num {
+		display: none;
+		font-size: 13px;
+	}
 
-.menu-btn {
-	display: block;
-	z-index: 103;
-}
+	.menu-btn {
+		display: block;
+		z-index: 103;
+	}
 
 
-/* INTRO
+	/* INTRO
 ================= */
 
-.intro {
-background-image: url("../src/img/banner_serv.jpg");
-	background-position: 37% 15%;
-	background-size: 180%;
-	padding-top: 2%;
-	padding-bottom: 5%;
-}
+	.intro {
+		background-image: url("../src/img/banner_serv.jpg");
+		background-position: 37% 15%;
+		background-size: 180%;
+		padding-top: 2%;
+		padding-bottom: 5%;
+	}
 
-.intro h1 {
-	margin-bottom: 17%;
-	font-size: 18px;
-	letter-spacing: 0.08em;
-}
+	.intro h1 {
+		margin-bottom: 17%;
+		font-size: 18px;
+		letter-spacing: 0.08em;
+	}
 
-.order-btns {
-	/* align-items: center; */
-}
-
-.intro-content p {
-	text-align: start;
-	font-size: 12px;
-	margin: 5% 0;
-}
+	.intro-content p {
+		text-align: start;
+		font-size: 12px;
+		margin: 5% 0;
+	}
 
 
-/* ICONS-BAR
+	/* ICONS-BAR
 ================== */
 
-.icons-bar {
-	display: none;
-	border-radius: 0;
-}
+	.icons-bar {
+		display: none;
+		border-radius: 0;
+	}
 
-.icons-bar li {
-	/* display: grid; */
+	.icons-bar li {
+		/* display: grid; */
 
-	padding-left: 40px;
-	max-width: 187px;
-	min-height: 33px;
-	/* align-content: center; */
-	
-}
+		padding-left: 40px;
+		max-width: 187px;
+		min-height: 33px;
+		/* align-content: center; */
 
-.icons-bar-inner ul {
-	grid-template-columns: repeat(2, 1fr);
-	gap: 2em;
-	font-size: 10px;
-	justify-items: center;
-}
+	}
 
-.icons-bar .icon {
-	background-size: 17%;
-	background-position: 0 50%;
-}
+	.icons-bar-inner ul {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 2em;
+		font-size: 10px;
+		justify-items: center;
+	}
 
-.icons-bar .icon-time {
-	background-size: 20%;
-}
+	.icons-bar .icon {
+		background-size: 17%;
+		background-position: 0 50%;
+	}
 
-.icons-bar .icon-contract {
-	background-position: 100% 50%;
-	background-size: 22%;
-	padding-left: 0;
-	padding-right: 40px;
-	justify-items: end ;
-}
+	.icons-bar .icon-time {
+		background-size: 20%;
+	}
 
-.icons-bar .icon-fast {
-	background-size: 28%;
-	background-position: 100% 50%;
-	text-align: end;
-}
+	.icons-bar .icon-contract {
+		background-position: 100% 50%;
+		background-size: 22%;
+		padding-left: 0;
+		padding-right: 40px;
+		justify-items: end;
+	}
 
-.icons-bar ul li:last-child {
-	padding-left: 0;
-	padding-right: 60px;
-	max-width: 190px;
-	
-}
+	.icons-bar .icon-fast {
+		background-size: 28%;
+		background-position: 100% 50%;
+		text-align: end;
+	}
+
+	.icons-bar ul li:last-child {
+		padding-left: 0;
+		padding-right: 60px;
+		max-width: 190px;
+
+	}
 
 
 
-/* three-dez 
+	/* three-dez 
 ====================*/
 
-.dez-content h2 {
-	margin-top: 40px;
-}
+	.dez-content h2 {
+		margin-top: 40px;
+	}
 
 	.dez-items {
 		flex-direction: column;
@@ -1127,54 +1206,54 @@ background-image: url("../src/img/banner_serv.jpg");
 
 
 
-/* SLIDER
+	/* SLIDER
 ===================== */
 
-.swiper-container {
-	max-width: 360px;
-	/* max-height: 256px; */
+	.swiper-container {
+		max-width: 360px;
+		/* max-height: 256px; */
 
-}
+	}
 
-.swiper-slide.swiper-slide-active {
-	width: 100%;
-}
+	.swiper-slide.swiper-slide-active {
+		width: 100%;
+	}
 
-.slider-item {
-	width: 100%;
-	padding: 25px 0;
-	margin-bottom: 20px;
-	border-radius: 0px;
-}
+	.slider-item {
+		width: 100%;
+		padding: 25px 0;
+		margin-bottom: 20px;
+		border-radius: 0px;
+	}
 
-.slider-img {
-	max-width: 100%;
-	margin-bottom: 25px;
-	border-radius: 5px;
-}
+	.slider-img {
+		max-width: 100%;
+		margin-bottom: 25px;
+		border-radius: 5px;
+	}
 
-.slider-news {
-	width: 90%;
-	/* padding-left: 5%;
+	.slider-news {
+		width: 90%;
+		/* padding-left: 5%;
 	padding-right: 5%; */
-}
+	}
 
 
 
-/* PARTNERS
+	/* PARTNERS
 ===================== */
 
-.section-partners {
-	margin-bottom: 30px;
-}
+	.section-partners {
+		margin-bottom: 30px;
+	}
 
 	.partners {
 		grid-template-columns: 1fr 1fr;
-	gap: 3em 1em;
+		gap: 3em 1em;
 	}
 
-.partner-logo {
-	margin-bottom: auto;
+	.partner-logo {
+		margin-bottom: auto;
 	}
 
 	.logo-akfo {
@@ -1198,7 +1277,7 @@ background-image: url("../src/img/banner_serv.jpg");
 		width: 52px;
 	}
 
-	 svg.ashan {
+	svg.ashan {
 		height: 30px;
 	}
 
@@ -1206,45 +1285,45 @@ background-image: url("../src/img/banner_serv.jpg");
 	/* FOOTER
 ===================== */
 
-.footer-menu {
-	display: grid;
-	grid-template-columns: 1, 1fr;
-	gap: 2em;
-	justify-content: center;
+	.footer-menu {
+		display: grid;
+		grid-template-columns: 1, 1fr;
+		gap: 2em;
+		justify-content: center;
 
-}
+	}
 
-.contacts,
-.footer-links li {
-	text-align: center;
-	line-height: 130%;
-}
+	.contacts,
+	.footer-links li {
+		text-align: center;
+		line-height: 130%;
+	}
 
-.footer-links a {
-	padding: 2px 0;
-}
+	.footer-links a {
+		padding: 2px 0;
+	}
 
-.copyright,
-.footer-btns li,
-.contacts p {
-	margin-left: auto;
-	margin-right: auto;
-}
+	.copyright,
+	.footer-btns li,
+	.contacts p {
+		margin-left: auto;
+		margin-right: auto;
+	}
 
-.contacts :first-child :first-of-type {
-	margin-bottom: 15px;
-}
+	.contacts :first-child :first-of-type {
+		margin-bottom: 15px;
+	}
 
-.footer-btns :first-child :first-of-type {
-	margin-bottom: 10%;
-}
+	.footer-btns :first-child :first-of-type {
+		margin-bottom: 10%;
+	}
 
-.copyright {
-	width: 80%;
-	font-size: 11px;
-	text-align: center;
-	/* padding-left: 25px;
+	.copyright {
+		width: 80%;
+		font-size: 11px;
+		text-align: center;
+		/* padding-left: 25px;
 	padding-right: 25px; */
-}
+	}
 
 }
