--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ z-index: -10;
 
 /* SLIDER
 ================== */
+
 .section .container-fluid {
 	width: 100%;
 }
@@ -720,12 +721,20 @@ footer {
 	font-weight: 500;
 }
 
-/* NEW PAGE! ABOUT
+
+
+
+
+/* NEW PAGE 02 ! ABOUT
 ===========================
 ===========================  */
 
-#aboutPage {
+/* #aboutPage {
 	margin-top: 0%;
+} */
+
+.section-about {
+	margin-bottom: 0;
 }
 
 .img-about {
@@ -756,11 +765,7 @@ footer {
 
 .about {
 		padding-top: 17%;
-		background: linear-gradient(340deg, rgba(255, 255, 255, 0.1) 30%, rgba(255, 255, 255, 0) 80%);
-	filter: drop-shadow(0px 4.9902px 8.31699px rgba(0, 0, 0, 0.4));
-	backdrop-filter: blur(4.1585px);
-	box-shadow: 0px 6px 10px rgb(0 0 0 / 10%);
-		border-radius: 10px;
+	background: linear-gradient(350deg,  #001220 20%, rgba(255, 255, 255, 0.1) 50%, #001220 90%);
 }
 
 .about-inner {
@@ -775,10 +780,150 @@ margin-bottom: 5%;
 
 }
 
-.about-content {
+
+
+/* NEW PAGE 03 ! SERVICES
+===========================
+===========================  */
+
+.intro-services {
+	background-image: url("../src/img/serv.jpg");
+	background-position: 0 18%;
+	background-size: cover;
+}
+
+
+
+/* NEW PAGE 04 ! SERTIFICATS
+===========================
+===========================  */
+
+.sertificats-section {
+	margin-top: 15%;
+}
+
+.sertificats {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	
+}
+
+.sertificats.ellipse {
+	position: absolute;
+	top: 0;
+	background: #D0C595;
+mix-blend-mode: screen;
+opacity: 0.15;
+filter: blur(150px);
+}
+
+.sertificats-inner {
+	display: grid;
+	grid-template-rows: repeat(2, 1fr, 5fr);
+	gap: 1em;
+	padding: 1%;
+	margin-bottom: 5%;
+}
+.sertificats-content {
+	padding: 0 5%;
+}
+
+.sertificats-img {
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 312px;
+	height: 450px;
+	/* margin-top: 5%; */
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.sert-1 {
+background-image: url('../src/img/sert_1\ 55.99.25.000.М.000389.09\ 1.jpg');
+}
+
+
+.sert-2 {
+background-image: url('../src/img/sert_2\ 77.01.16.000.М.424.01\ 1.jpg');
+}
+
+
+.sert-3 {
+background-image: url('../src/img/sert_3\ 77.01.16.000.М.004318.06\ 1.jpg');
+}
+
+/* NEW PAGE 05! WORK
+===========================
+===========================  */
+
+.section-work {
+	padding-top: 15%;
+	padding-bottom: 15%;
+	background-image: url('../src/img/work.jpg');
+	background-repeat: no-repeat;
+	background-size: 110%;
+	background-position: 0% 15%;
+}
+
+.work-inner ul {
+	margin-bottom: 6%;
+}
+
+.work-inner ul:last-child {
+	margin-top: 15%;
+	list-style-type: none;
+}
+
+.work-inner li {
+	margin-bottom: 5%;
+}
+
+
+/* NEW PAGE 06! CONTACTS
+===========================
+===========================  */
+
+.contacts-section .container-fluid {
+	padding: 0;
+}
+
+.contacts-section {
+	margin-top: 10%;
+			/* background-color: #D0C595;
+	mix-blend-mode: screen;
+	opacity: 0.15;
+	filter: blur(150px); */
+}
+
+.contacts-content{
+	margin-bottom: 5%;
+}
+
+.contacts-content ul {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 2em;
+	justify-content: center;
+	list-style-type: none;
+	align-items: center;
+}
+
+.contacts-content li {
+margin-left: auto;
+margin-right: auto;
 
 }
 
+.contacts-content p {
+	max-width: 200px;
+
+}
+
+.contacts :first-child :first-of-type {
+	margin-bottom: 0;
+}
 
 
 @media (max-width: 1399px) {
@@ -1325,5 +1470,37 @@ margin-bottom: 5%;
 		/* padding-left: 25px;
 	padding-right: 25px; */
 	}
+
+
+
+/* NEW PAGE 05! WORK
+===========================
+===========================  */
+
+.section-work {
+	padding-bottom: 2%;
+	margin-bottom: 0;
+	background-size: 160%;
+	background-position: -0% 0%;
+}
+
+.section-work .title {
+	margin-bottom: 25px;
+}
+
+.work-inner {
+	margin-left: 2%;
+}
+
+/* NEW PAGE 06! CONTACTS
+===========================
+===========================  */
+
+	.contacts-content ul {
+		grid-template-columns: 1fr;
+		align-items: center;
+	}
+
+
 
 }
