--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ section {
 	text-transform: uppercase;
 }
 
-.intro h1 {
+/* .intro */h1 { 
 	margin-bottom: 70px;
 	font-size: 46px;
 	font-weight: 700;
@@ -263,9 +263,9 @@ header .container {
 	padding-bottom: 50px;
 }
 
-.services {
+/* .services {
 	background-image: url("../src/img/serv.jpg");
-}
+} */
 
 .intro-content {
 	max-width: 580px;
@@ -786,11 +786,83 @@ margin-bottom: 5%;
 ===========================
 ===========================  */
 
+/* INTRO SERV
+========================== */
+
 .intro-services {
+	padding-bottom: 8%;
+	margin-bottom: 140px;
 	background-image: url("../src/img/serv.jpg");
+	background-repeat: no-repeat;
 	background-position: 0 18%;
 	background-size: cover;
 }
+
+.icons-serv {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 2em;
+	list-style-type: none;
+	
+}
+
+.icons-serv li {
+	display: grid;
+	padding-left: 40px;
+align-content: center;
+}
+
+
+.icons-serv .icon {
+	height: 36px;
+}
+
+/* SERVICES
+========================== */
+
+.services-inner {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 4em;
+	justify-content: stretch;
+	align-items: center;
+	margin-bottom: 5%;
+	/* padding: 3%; */
+}
+
+.title-serv {
+	padding-top: 0;
+	margin-bottom: 5%;
+}
+
+/* .services-content {
+	display: grid;
+	align-items: center;
+} */
+
+.serv-img {
+	background-repeat: no-repeat;
+	/* width: 617px; */
+	height: 412px;
+
+	border-radius: 5px;
+}
+
+.serv-img-1 {
+	background-size: contain;
+	background-image: url('../src/img/serv_1.jpg');
+}
+
+.serv-img-2 {
+	background-size: contain;
+	background-image: url('../src/img/serv_2.jpg');
+}
+
+.serv-img-3 {
+	background-size: contain;
+	background-image: url('../src/img/serv_3.jpg');
+}
+
 
 
 
@@ -865,6 +937,7 @@ background-image: url('../src/img/sert_3\ 77.01.16.000.М.004318.06\ 1.jpg');
 	background-repeat: no-repeat;
 	background-size: 110%;
 	background-position: 0% 15%;
+	margin-bottom: 0;
 }
 
 .work-inner ul {
@@ -921,9 +994,22 @@ margin-right: auto;
 
 }
 
-.contacts :first-child :first-of-type {
+.contacts-content .contacts :first-child :first-of-type {
 	margin-bottom: 0;
 }
+
+.contacts-map {
+	opacity: .9;
+}
+
+.contacts-map iframe {
+border-radius: 10px;
+}
+
+
+
+/* MEDIA
+===========================  */
 
 
 @media (max-width: 1399px) {
@@ -976,7 +1062,7 @@ margin-right: auto;
 		padding-bottom: 0;
 	}
 
-	.intro h1 {
+	/* .intro  */h1 {
 		margin-bottom: 10%;
 		font-size: 33px;
 		letter-spacing: 0.08em;
@@ -1036,6 +1122,25 @@ margin-right: auto;
 		margin-bottom: 0;
 	}
 
+	/* NEW PAGE 02 ! ABOUT
+===========================
+===========================  */
+
+.img-about {
+		width: 100%;
+	height: 300px;
+	background-size: cover;
+}
+
+
+	/* NEW PAGE 05! WORK
+===========================
+===========================  */
+
+	.section-work {
+		padding-bottom: 5%;
+	}
+
 }
 
 
@@ -1046,6 +1151,7 @@ margin-right: auto;
 	}
 
 	h3 {
+		font-size: 14px;
 		padding-top: 5%;
 	}
 
@@ -1130,11 +1236,15 @@ margin-right: auto;
 
 		/* ABOUT PAGE
 ================== */
+.section-about {
+margin-bottom: 10%;
+}
 
 	.about-inner {
 		grid-template-columns: 1fr;
 		gap: 2em;
 		align-content: center;
+		margin-bottom: 1%;
 }
 
 .img-about {
@@ -1147,8 +1257,61 @@ margin-right: auto;
 .img-2 {
 	background-size: 110%;
 	background-position: 15% 40%;
+	order: 1;
 }
 
+/* NEW PAGE 03 ! SERVICES
+===========================
+===========================  */
+
+/* INTRO SERV
+========================== */
+
+.intro-services {
+	margin-bottom: 100px;
+	background-image: url("../src/img/serv.jpg");
+	background-position: 60% 18%;
+	background-size: 150%;
+}
+
+.icons-serv {
+	margin-top: 5%;
+}
+
+.services-inner {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 3em;
+	justify-content: stretch;
+	align-items: center;
+	margin-bottom: 15%;
+	/* padding: 3%; */
+}
+
+.services-inner:last-child {
+	margin-bottom: 0;
+}
+
+.serv-img {
+	background-position: 45% 0;
+background-size: cover;
+}
+
+.serv-img-2 {
+	background-position: 30% 0;
+	order: 1;
+}
+
+.serv-img-3 {
+	background-position: 60% 0;
+}
+
+/* NEW PAGE 06! CONTACTS
+===========================
+===========================  */
+.contacts-section {
+	margin-top: 15%;
+}
 
 }
 
@@ -1252,7 +1415,7 @@ margin-right: auto;
 		padding-bottom: 5%;
 	}
 
-	.intro h1 {
+	 h1 {
 		margin-bottom: 17%;
 		font-size: 18px;
 		letter-spacing: 0.08em;
@@ -1473,6 +1636,35 @@ margin-right: auto;
 
 
 
+
+	.img-about {
+		width: 100%;
+		height: 250px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+
+	/* INTRO SERV
+========================== */
+
+.intro-services {
+	margin-bottom: 50px;
+	background-image: url("../src/img/serv.jpg");
+	background-position: 60% 18%;
+	background-size: 180%;
+}
+
+.services-content {
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.icons-serv {
+	display: none;
+}
+
+
 /* NEW PAGE 05! WORK
 ===========================
 ===========================  */
@@ -1495,7 +1687,9 @@ margin-right: auto;
 /* NEW PAGE 06! CONTACTS
 ===========================
 ===========================  */
-
+.contacts-section {
+	margin-top: 17%;
+}
 	.contacts-content ul {
 		grid-template-columns: 1fr;
 		align-items: center;
