--- a/css/style.css
+++ b/css/style.css
@@ -287,17 +287,13 @@ header .container {
 
 .intro {
 	/* height: 100vh; */
-	background-image: url("../src/img/hero.jpg");
+	background-image: url("../img/hero.jpg");
 	background-position: 0 18%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin-bottom: 0;
 	padding-bottom: 50px;
 }
-
-/* .services {
-	background-image: url("../src/img/serv.jpg");
-} */
 
 .intro-content {
 	max-width: 580px;
@@ -377,19 +373,19 @@ header .container {
 }
 
 .icon-time {
-	background-image: url("../src/img/icon_time.svg");
+	background-image: url("../img/icon_time.svg");
 }
 
 .icon-contract {
-	background-image: url("../src/img/icon_contracts.svg");
+	background-image: url("../img/icon_contracts.svg");
 }
 
 .icon-act {
-	background-image: url("../src/img/icon_act.svg");
+	background-image: url("../img/icon_act.svg");
 }
 
 .icon-fast {
-	background-image: url("../src/img/icon_fast.png");
+	background-image: url("../img/icon_fast.png");
 }
 
 
@@ -474,15 +470,15 @@ header .container {
 
 
 .icon-rat {
-	background-image: url("../src/img/icon_rat.svg");
+	background-image: url("../img/icon_rat.svg");
 }
 
 .icon-virus {
-	background-image: url("../src/img/icon_virus.svg");
+	background-image: url("../img/icon_virus.svg");
 }
 
 .icon-insect {
-	background-image: url("../src/img/icon_insect.svg");
+	background-image: url("../img/icon_insect.svg");
 }
 
 .dez-item p {
@@ -622,7 +618,7 @@ header .container {
 .swiper-button-prev {
 	top: 45%;
 	left: 20%;
-	background-image: url('../src/arrow-prev-icon.png');
+	background-image: url('../img/arrow-prev-icon.png');
 	width: 80px;
 	height: 80px;
 }
@@ -630,7 +626,7 @@ header .container {
 .swiper-button-next {
 	top: 45%;
 	right: 20%;
-	background-image: url('../src/arrow-next-icon.png');
+	background-image: url('../img/arrow-next-icon.png');
 	width: 80px;
 	height: 80px;
 }
@@ -680,11 +676,6 @@ header .container {
 ===================== */
 
 footer {
-	/* background-image: url(../src/img/footer_1.jpg);
-	background-repeat: no-repeat;
-	background-size: cover; */
-	/* margin-top: 160px; */
-
 	font-size: 13px;
 }
 
@@ -786,19 +777,19 @@ footer {
 .img-1 {
 	background-size: 110%;
 	background-position: 5% 100%;
-	background-image: url('../src/img/green-office.jpg');
+	background-image: url('../img/green-office.jpg');
 }
 
 .img-2 {
 	background-size: 90%;
 	background-position: 0 100%;
-	background-image: url('../src/img/img_2.jpg');
+	background-image: url('../img/img_2.jpg');
 }
 
 .img-3 {
 	background-size: 102%;
 	background-position: 15% 50%;
-	background-image: url('../src/img/img_3.jpg');
+	background-image: url('../img/img_3.jpg');
 }
 
 .about {
@@ -830,7 +821,7 @@ footer {
 .intro-services {
 	padding-bottom: 8%;
 	margin-bottom: 140px;
-	background-image: url("../src/img/serv.jpg");
+	background-image: url("../img/serv.jpg");
 	background-repeat: no-repeat;
 	background-position: 0 18%;
 	background-size: cover;
@@ -900,17 +891,17 @@ align-items: center;
 }
 
 .serv-img-1 {
-	background-image: url('../src/img/serv_1.jpg');
+	background-image: url('../img/serv_1.jpg');
 }
 
 .serv-img-2 {
 	/* background-size: contain; */
-	background-image: url('../src/img/serv_2.jpg');
+	background-image: url('../img/serv_2.jpg');
 }
 
 .serv-img-3 {
 	/* background-size: contain; */
-	background-image: url('../src/img/serv_3.jpg');
+	background-image: url('../img/serv_3.jpg');
 }
 
 
@@ -964,17 +955,17 @@ align-items: center;
 }
 
 .sert-1 {
-	background-image: url('../src/img/sert_1\ 55.99.25.000.М.000389.09\ 1.jpg');
+	background-image: url('../img/full_sert_1\ 55.99.25.000.М.000389.09\ 1.jpg');
 }
 
 
 .sert-2 {
-	background-image: url('../src/img/sert_2\ 77.01.16.000.М.424.01\ 1.jpg');
+	background-image: url('../img/full_sert_2\ 77.01.16.000.М.424.01\ 1.jpg');
 }
 
 
 .sert-3 {
-	background-image: url('../src/img/sert_3\ 77.01.16.000.М.004318.06\ 1.jpg');
+	background-image: url('../img/full_sert_3\ 77.01.16.000.М.004318.06\ 1.jpg');
 }
 
 /* NEW PAGE 05! WORK
@@ -984,7 +975,7 @@ align-items: center;
 .section-work {
 	padding-top: 15%;
 	padding-bottom: 15%;
-	background-image: url('../src/img/work.jpg');
+	background-image: url('../img/work.jpg');
 	background-repeat: no-repeat;
 	background-size: 110%;
 	background-position: 0% 15%;
@@ -1096,12 +1087,18 @@ justify-content: center;
 
 .modal-header .btn-close {
 	position: absolute;
-top: 13%;
+top: 17%;
 right: 3%;
 }
 
+.modal-header-sert .btn-close {
+	position: absolute;
+top: 50%;
+right: 5%;
+}
+
 .btn-close {
-	background: transparent url('../src/btn_close_modal.svg') center/1em auto no-repeat;
+	background: transparent url('../img/btn_close_modal.svg') center/1em auto no-repeat;
 	opacity: 0.5;
 }
 
@@ -1171,17 +1168,6 @@ right: 3%;
 	background-size: 100% auto;
 }
 
-.full-sert {
-	background-image: url('../src/img/full_sert_1\ 55.99.25.000.М.000389.09\ 1.jpg');
-}
-
-.modal-sert-2 {
-	background-image: url('../src/img/full_sert_2\ 77.01.16.000.М.424.01\ 1.jpg');
-}
-
-.modal-sert-3 {
-	background-image: url('../src/img/full_sert_3\ 77.01.16.000.М.004318.06\ 1.jpg');
-}
 
 /* MEDIA
 ===========================  */
@@ -1483,7 +1469,7 @@ right: 3%;
 
 	.intro-services {
 		margin-bottom: 100px;
-		background-image: url("../src/img/serv.jpg");
+		background-image: url("../img/serv.jpg");
 		background-position: 60% 18%;
 		background-size: 150%;
 	}
@@ -1624,7 +1610,7 @@ right: 3%;
 ================= */
 
 	.intro {
-		background-image: url("../src/img/banner_serv.jpg");
+		background-image: url("../img/banner_serv.jpg");
 		background-position: 37% 15%;
 		background-size: 180%;
 		padding-top: 2%;
@@ -1868,7 +1854,7 @@ right: 3%;
 
 	.intro-services {
 		margin-bottom: 50px;
-		background-image: url("../src/img/serv.jpg");
+		background-image: url("../img/serv.jpg");
 		background-position: 60% 18%;
 		background-size: 180%;
 	}
