--- a/css/style.css
+++ b/css/style.css
@@ -507,11 +507,12 @@ header .container {
 	width: 190px;
 } */
 
-.swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+.swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
+.swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
 	width: 20%;
 	display: flex;
 	flex-direction: row;
-	
+
 	/* left: 43%; */
 	justify-content: space-between;
 }
@@ -534,9 +535,9 @@ header .container {
 }
 
 .swiper-pagination-bullet-active {
-/* scale: 1.4; */
-width: 35px;
-/* height: 6px; */
+	/* scale: 1.4; */
+	width: 35px;
+	/* height: 6px; */
 	background: linear-gradient(196.77deg, rgba(254, 77, 77, 0.9) 0.74%, rgba(206, 63, 63, 0) 119.62%);
 	/* arrow slide */
 
@@ -1133,7 +1134,8 @@ footer {
 	color: var(--mainRed);
 }
 
-.form-item input {
+.form-item input,
+.form-item textarea {
 	padding: 6px;
 	/* padding-bottom: 5px; */
 }
@@ -1144,6 +1146,10 @@ footer {
 
 .form-label {
 	margin-right: 3%;
+}
+
+.form-input {
+	border-radius: 5px;
 }
 
 .btn-rush {
@@ -1171,9 +1177,10 @@ footer {
 	background-size: 100% auto;
 }
 
-.empty {
-	color: #fff;
-	background-color: #fd2727;
+._error {
+	color: rgb(0, 0, 0);
+	/* background-color: #fd2727; */
+	box-shadow: 0 0 15px #fd6363ee;
 }
 
 .min-length {
@@ -1181,9 +1188,9 @@ footer {
 	background-color: #faed8b;
 }
 
-.form-body {
-	/* position: relative; */
-}
+/*.form-body {
+	 position: relative;
+} */
 
 .modal-content::after {
 	content: '';
@@ -1204,22 +1211,33 @@ footer {
 	visibility: visible;
 }
 
-#_sending {
+.sending-bg {
 	position: absolute;
-	top: 30%;
-	left: 0;
 	width: 100%;
-	height: 50px;
+	height: 100%;
+	top: 0%;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	background-color: #001220;
+	z-index: 2000;
+	opacity: .7;
+}
+
+.sending-img {
+	width: 60%;
+	margin: auto;
 	mix-blend-mode: screen;
+
 }
 
 .message-send-modal {
 	position: fixed;
 	width: 100%;
-		top: 25%;
+	top: 25%;
 	left: 0%;
 	right: 0;
-		z-index: 100;
+	z-index: 2000;
 }
 
 .message-send,
